# internal/order/ports/openapi_types.gen.go
@@ -3,6 +3,42 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
 package ports
 
+// Defines values for OrderStatus.
+const (
+	ORDERSTATUSCANCELLED   OrderStatus = "ORDER_STATUS_CANCELLED"
+	ORDERSTATUSDELIVERED   OrderStatus = "ORDER_STATUS_DELIVERED"
+	ORDERSTATUSDELIVERING  OrderStatus = "ORDER_STATUS_DELIVERING"
+	ORDERSTATUSPAID        OrderStatus = "ORDER_STATUS_PAID"
+	ORDERSTATUSPENDING     OrderStatus = "ORDER_STATUS_PENDING"
+	ORDERSTATUSPREPARING   OrderStatus = "ORDER_STATUS_PREPARING"
+	ORDERSTATUSREADY       OrderStatus = "ORDER_STATUS_READY"
+	ORDERSTATUSUNSPECIFIED OrderStatus = "ORDER_STATUS_UNSPECIFIED"
+)
+
+// Valid indicates whether the value is a known member of the OrderStatus enum.
+func (e OrderStatus) Valid() bool {
+	switch e {
+	case ORDERSTATUSCANCELLED:
+		return true
+	case ORDERSTATUSDELIVERED:
+		return true
+	case ORDERSTATUSDELIVERING:
+		return true
+	case ORDERSTATUSPAID:
+		return true
+	case ORDERSTATUSPENDING:
+		return true
+	case ORDERSTATUSPREPARING:
+		return true
+	case ORDERSTATUSREADY:
+		return true
+	case ORDERSTATUSUNSPECIFIED:
+		return true
+	default:
+		return false
+	}
+}
+
 // CreateOrderRequest defines model for CreateOrderRequest.
 type CreateOrderRequest struct {
 	CustomerID string             `json:"customerID"`
@@ -30,12 +66,19 @@ type ItemWithQuantity struct {
 
 // Order defines model for Order.
 type Order struct {
-	CustomerID  *string `json:"customerID,omitempty"`
-	Id          *string `json:"id,omitempty"`
-	Items       *[]Item `json:"items,omitempty"`
+	CustomerID *string `json:"customerID,omitempty"`
+	Id         *string `json:"id,omitempty"`
+	Items      *[]Item `json:"items,omitempty"`
+
+	// PaymentLink 支付链接
 	PaymentLink *string `json:"paymentLink,omitempty"`
-	Status      *int    `json:"status,omitempty"`
+
+	// Status 订单状态
+	Status *OrderStatus `json:"status,omitempty"`
 }
+
+// OrderStatus 订单状态
+type OrderStatus string
 
 // PostCustomerCustomerIDOrdersJSONRequestBody defines body for PostCustomerCustomerIDOrders for application/json ContentType.
 type PostCustomerCustomerIDOrdersJSONRequestBody = CreateOrderRequest
